2008-07-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/psd-save.c: removed psd-save source here ...

	* plug-ins/psd/Makefile.am
	* plug-ins/psd/psd-save.c: ... and added it back here.

2008-07-29  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/vectors.pdb: added the real name of the author
	of the new PDB function.

	* app/pdb/vectors-cmds.c: regenerated.

2008-07-28  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/edit.pdb (edit_stroke_vectors_invoker): check
	that the passed vectors item is attached.

	* app/pdb/edit-cmds.c: regenerated.

2008-07-28  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/vectors.pdb: applied patch from LightningIsMyName
	adding the new PDB function gimp-vectors-copy (bug #544212).

	* app/pdb/internal-procs.c
	* app/pdb/vectors-cmds.c
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

	* libgimp/gimp.def: updated.

2008-07-27  Sven Neumann  <sven@gimp.org>

	* app/text/gimptext-compat.c (text_get_extents): applied the same
	workaround for a memory leak in PangoFT2 (bug #143542) as was
	applied long ago in gimptextlayout.c.

2008-07-27  Sven Neumann  <sven@gimp.org>

	* app/text/gimptext-compat.c (text_get_extents)
	* app/text/gimptextlayout-render.c (gimp_text_layout_render):
	use the readonly variant of pango_layout_iter_get_line().

2008-07-27  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_synthesize_motion): Bail out if there is no
	pending rectangle to synthesize a motion on. Fixes bug #544181.

2008-07-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/psd/Makefile.am: renamed executable to 'psd-load'.

2008-07-24  Sven Neumann  <sven@gimp.org>

	* app/widgets/gtkscalebutton.c: added missing prototypes.

2008-07-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimphelplocale.c: formatting.

2008-07-24  Sven Neumann  <sven@gimp.org>

	* configure.in: minor cleanup of the checks for the URI plug-in.
